--- a/scoreboard/static/scoreboard/style.css
+++ b/scoreboard/static/scoreboard/style.css
@@ -140,7 +140,7 @@ h1.gameTitle{
     text-shadow: 3px 3px black;
     padding-left:5px;
     font-weight:bold;
-
+    color:white;
     background: #00007b;
 
 }
