--- a/scoreboard/static/scoreboard/style.css
+++ b/scoreboard/static/scoreboard/style.css
@@ -178,7 +178,7 @@ ol{
 background: #e65c00;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #F9D423, #e65c00);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #F9D423, #e65c00); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+color:white;
 
     border:3px solid white;
     text-shadow: 3px 3px black;
