--- a/templates/scoreboard/links.html
+++ b/templates/scoreboard/links.html
@@ -5,8 +5,8 @@
     <title>Links</title>
 </head>
 <body>
-<a href="/achievementstation/day/1">Achievement Center Day 1</a><br>
-<a href="/achievementstation/day/2">Achievement Center Day 2</a><br>
+<a href="/achievementstation/day/1">Achievement Station Day 1</a><br>
+<a href="/achievementstation/day/2">Achievement Station Day 2</a><br>
 <a href="/tournament/day/1">Tournaments Day 1</a><br>
 <a href="/tournament/day/2">Tournaments Day 2</a><br>
 <a href="/admin">Admin</a>
