changed style of tournament page

--- a/templates/scoreboard/index-tournament.html
+++ b/templates/scoreboard/index-tournament.html
@@ -1,6 +1,8 @@
 {% extends 'scoreboard/base.html' %}
 {% load static %}
+
 {% block body %}
+<link rel="stylesheet" type="text/css" href="{% static 'scoreboard/tourney.css' %}" />
 
 <div class="tournament">
    <center><img class="ttitle" src="{% static 'x-Tournament Results.png' %}"></center><br>
