--- a/scoreboard/static/scoreboard/tourney.css
+++ b/scoreboard/static/scoreboard/tourney.css
@@ -1,8 +1,3 @@
-body {
-    background: #007b7b;
-}
-
-
 @font-face {
 
     font-family: MarioKart;
@@ -21,7 +16,11 @@ body {
 
 }
 
+body {
 
+    background: darkolivegreen;
+
+}
 
 .rainbow {
 
@@ -94,12 +93,28 @@ body {
     box-shadow: 4px 4px black;
 }
 
+.TourneyGame {
 
-.game.upcoming {
-    background: #827d84;
+    margin-left: 10px;
+    margin-right: auto;
+    margin-bottom: 10px;
+    width: 32%;
+    display: inline-block;
+    box-shadow: 4px 4px black;
+    background: rgba(255, 255, 255, .7);
 }
 
+.TourneyGame:nth-child(odd) {
+    background: rgba(255, 255, 255, .8);
+}
 
+.game.upcoming {
+    background: #841405;
+}
+
+/*.TourneyGame.upcoming{*/
+/*background:#827d84;*/
+/*}*/
 a {
     color: white;
 }
@@ -140,4 +155,32 @@ ol {
     border-right: 1px solid grey;
     border-left: 1px solid grey;
     border-top: 1px solid white;
+}
+
+
+h1 {
+    background: #dd7c1b; /* fallback for old browsers */
+    color: white;
+    border: 3px solid white;
+    text-shadow: 3px 3px black;
+    padding-left: 5px;
+    min-height: 102px;
+
+}
+
+
+
+
+.ttitle {
+    margin-top: 10px;
+}
+
+.tourneyPlaces {
+    margin-left: 50px;
+}
+
+b {
+    color: red;
+    text-shadow: 2px 2px black;
+    border-bottom: 2px solid black;
 }
